test_suite/alan-2022-examples/failing/000440_mutation.alan
source s begin < boolean _A6; relax end
